Fix the icon holder size so that they aren't clipped.

--- a/app/stylesheets/design/_buttons.scss
+++ b/app/stylesheets/design/_buttons.scss
@@ -41,10 +41,10 @@ BUTTONS / ICONS
 .button.social {
   background: none;
   display: block;
-  height: 31px;
+  height: 33px;
   padding: 0;
   @include hide-text;
-  width: 31px;
+  width: 33px;
   border: none;
   border-radius: 0px;
   }
